--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ asyncpg = "^0.30.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 faker = "^37.1.0"
+pydantic = {extras = ["email"], version = "^2.11.3"}
 
 
 [build-system]
