feat: Implement email verification flow
- Add resend library for email sending.
- Create VerificationToken model, schema, and CRUD operations.
- Integrate token generation and email sending into registration endpoint.
- Add /verify-email endpoint to handle token validation and user status updates.
- Add FRONTEND_URL config and related helper CRUD functions (get_user_by_id, update_user_internal).
- Add UserUpdateInternal schema.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 faker = "^37.1.0"
 pydantic = {extras = ["email"], version = "^2.11.3"}
+resend = "^2.7.0"
 
 
 [build-system]
