feat(auth): Implement login and password reset flows
- Add POST /login endpoint using OAuth2PasswordRequestForm.
- Add POST /request-password-reset endpoint: generates token, sends email.
- Add POST /reset-password endpoint: validates token, updates password.
- Add PasswordResetToken model, schema, CRUD, and migration.
- Add update_user_password CRUD function.
- Add  dependency for form data handling.
- Add  to config settings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 faker = "^37.1.0"
 pydantic = {extras = ["email"], version = "^2.11.3"}
 resend = "^2.7.0"
+python-multipart = "^0.0.20"
 
 
 [build-system]
