fix: Resolve GCS auth and profile issues
- Switch GCS authentication to use Service Account Impersonation, resolving RefreshError and avoiding key file downloads.
- Add TARGET_SERVICE_ACCOUNT_EMAIL to .env and config.
- Update storage util to initialize GCS client with impersonated credentials.
- Add profile_picture_signed_url to UserProfile schema.
- Generate signed URLs in user profile endpoints for image display.
- Remove unused GCS download endpoint.

--- a/alembic.ini
+++ b/alembic.ini
@@ -65,9 +65,9 @@ version_path_separator = os
 
 # Set the database URL.
 # Make sure this matches the DATABASE_URL in your .env file.
-# The env.py script now reads directly from settings, but this is used by
-# the alembic command line tool and the default online migration path.
-sqlalchemy.url = postgresql+asyncpg://user:password@host:port/db
+# The env.py script should read directly from settings, so this line
+# should typically be commented out to avoid conflicts.
+# sqlalchemy.url = postgresql+asyncpg://user:password@host:port/db
 
 
 [post_write_hooks]
