--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: shareyourspace-backend-backend-1
     ports:
       - "8000:8000"
     volumes:
@@ -15,22 +16,25 @@ services:
       - ./main.py:/app/main.py
       - ./alembic.ini:/app/alembic.ini
       - ./alembic:/app/alembic
+      # Mount the host's ADC file into the container for local development authentication
+      - ~/.config/gcloud/application_default_credentials.json:/root/.config/gcloud/application_default_credentials.json:ro
     env_file:
       - .env
     depends_on:
-      - db
-    # Add command override if you want hot-reloading during development
-    # command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+      db:
+        condition: service_healthy
+    command: poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   db:
     image: postgres:latest
+    container_name: shareyourspace-backend-db-1
     # Use pgvector image if you need vector capabilities out-of-the-box
     # image: pgvector/pgvector:pg16
     environment:
       # These variables should match the ones used in your DATABASE_URL in .env
-      POSTGRES_USER: ${POSTGRES_USER} # Replace with actual user or reference .env
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Replace with actual password or reference .env
-      POSTGRES_DB: ${POSTGRES_DB} # Replace with actual db name or reference .env
+      POSTGRES_USER: ${POSTGRES_USER:-user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_DB: ${POSTGRES_DB:-db}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       # You can add init scripts here if needed, e.g., to create extensions
@@ -38,8 +42,12 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 5s
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER:-user} -d ${POSTGRES_DB:-db}",
+        ]
+      interval: 10s
       timeout: 5s
       retries: 5
 
