--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ faker = "^37.1.0"
 pydantic = {extras = ["email"], version = "^2.11.3"}
 resend = "^2.7.0"
 python-multipart = "^0.0.20"
+google-cloud-storage = "^3.1.0"
 
 
 [build-system]
