feat: Add Company/Startup models, schemas, CRUD, and API endpoints
- Define Company and Startup SQLAlchemy models.
- Add relationships between User and Company/Startup.
- Generate Alembic migration for new models and relationships.
- Fix Alembic env.py/ini to connect correctly within Docker.
- Create Pydantic schemas for Company/Startup.
- Implement basic CRUD functions (get_by_id).
- Create API router and GET endpoints for Company/Startup profiles.
- Ensure endpoints require authentication.
- Fix various import errors in schemas and crud packages.

--- a/alembic.ini
+++ b/alembic.ini
@@ -59,8 +59,8 @@ version_path_separator = os
 # new in Alembic version 1.10
 # recursive_version_locations = false
 
-# the output encoding used when revision files
-# are written from script.py.mako
+# the output encoding used when dealing with database server messages.
+# psycopg2 default is 'utf-8'.
 # output_encoding = utf-8
 
 # Set the database URL.
@@ -69,6 +69,10 @@ version_path_separator = os
 # should typically be commented out to avoid conflicts.
 # sqlalchemy.url = postgresql+asyncpg://user:password@host:port/db
 
+# the underlying database driver dialect for sqlalchemy
+# If you are using asyncpg, make sure it's configured correctly
+# sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = %(DATABASE_URL)s
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
