--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,30 +26,22 @@ services:
     command: poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   db:
-    image: postgres:latest
+    image: pgvector/pgvector:pg16
     container_name: shareyourspace-backend-db-1
-    # Use pgvector image if you need vector capabilities out-of-the-box
-    # image: pgvector/pgvector:pg16
     environment:
-      # These variables should match the ones used in your DATABASE_URL in .env
-      POSTGRES_USER: ${POSTGRES_USER:-user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-      POSTGRES_DB: ${POSTGRES_DB:-db}
+      POSTGRES_USER: ${POSTGRES_USER:-admin}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changethis}
+      POSTGRES_DB: ${POSTGRES_DB:-shareyourspacedb}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      # You can add init scripts here if needed, e.g., to create extensions
-      # - ./scripts/db/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "pg_isready -U ${POSTGRES_USER:-user} -d ${POSTGRES_DB:-db}",
-        ]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
 
 volumes:
   postgres_data:
