--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ resend = "^2.7.0"
 python-multipart = "^0.0.20"
 google-cloud-storage = "^3.1.0"
 pgvector = "^0.4.0"
+google-generativeai = "^0.8.5"
 
 
 [build-system]
