--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.115.12"
-uvicorn = {extras = ["standard"], version = "^0.34.1"}
+uvicorn = {extras = ["standard"], version = "^0.34.2"}
 pydantic-settings = "^2.8.1"
 python-dotenv = "^1.1.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
@@ -24,6 +24,7 @@ python-multipart = "^0.0.20"
 google-cloud-storage = "^3.1.0"
 pgvector = "^0.4.0"
 google-generativeai = "^0.8.5"
+python-socketio = "^5.13.0"
 
 
 [build-system]
