--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ google-cloud-storage = "^3.1.0"
 pgvector = "^0.4.0"
 google-generativeai = "^0.8.5"
 python-socketio = "^5.13.0"
+bcrypt = "4.0.1"
 
 
 [build-system]
